# recipe-machine-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  recipe-machine-2-aarch64
